update to exercises and starting bom exercise defuse_the_bom.php

--- a/public/function_practice.html
+++ b/public/function_practice.html
@@ -70,18 +70,24 @@ function validNumbers(x, y) {
 	}
 
 
+	function isNumber(n) {
+		if (isNan(n)) {
+			console.log("parameters must be numbers");
+			return true;
+		}
+
+	}
+
+
 
 
 
 }
 
 function sum(a, b) {
-	if (typeof a == 'number' && typeof b == 'number') {
+	if (isNumber(a) && isNumber(b)) {
 		return a + b;
-	} else {
-		alert("parameters must be numbers");
-		return false;
-	}
+	
     return console.log(a + b);
 }
 sum("2", 4);
