--- a/public/manipulating_arrays_js.html
+++ b/public/manipulating_arrays_js.html
@@ -49,7 +49,7 @@ var marsArray = planets.splice(planets.indexOf('earth') + 1, 1);
 logPlanets();
 
 console.log('Using splice to add back the planet after Earth.');
-planets.splice(planets.indexOf('earth') + 1, 0, marsArray[]);
+planets.splice(planets.indexOf('earth') + 1, 0, marsArray[]s);
 
 // todo: Do what the log statement above says you will do.
 logPlanets();
